[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Delphi/AxDev.pas


// 사용자가 지정한 축의 홈 서치를 시작한다.
// lHomeMode 사용시 설정 : 0 - 5 설정 (Move Return후에 Search를  시작한다.)
// lHomeMode -1로 그대로 사용시 HomeConfig에서 사용한대로 그대로 설정됨.
// 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
function AxmHomeSetMoveSearch(lAxisNo : LongInt; dVel : Double; dAccel : Double; dDecel : Double) : DWord; stdcall;

// 사용자가 지정한 축의 홈 리턴을 시작한다.
// lHomeMode 사용시 설정 : 0 - 12 설정 
// lHomeMode -1로 그대로 사용시 HomeConfig에서 사용한대로 그대로 설정됨.
// 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
function AxmHomeSetMoveReturn(lAxisNo : LongInt; dVel : Double; dAccel : Double; dDecel : Double) : DWord; stdcall;

// 사용자가 지정한 축의 홈 이탈을 시작한다.
// 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
function AxmHomeSetMoveLeave(lAxisNo : LongInt; dVel : Double; dAccel : Double; dDecel : Double) : DWord; stdcall;

// 사용자가 지정한 다축의 홈 서치을 시작한다.
// lHomeMode 사용시 설정 : 0 - 5 설정 (Move Return후에 Search를  시작한다.)
// lHomeMode -1로 그대로 사용시 HomeConfig에서 사용한대로 그대로 설정됨.
// 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
function AxmHomeSetMultiMoveSearch(lArraySize : LongInt; lpAxesNo : PLongInt; dpVel : PDouble; dpAccel : PDouble; dpDecel : PDouble) : DWord; stdcall;

//지정된 좌표계의 구동 속도 프로파일 모드를 설정한다.
// (주의점 : 반드시 축맵핑 하고 사용가능)
  // ProfileMode : '0' - 대칭 Trapezode
  //               '1' - 비대칭 Trapezode
  //               '2' - 대칭 Quasi-S Curve
  //               '3' - 대칭 S Curve
  //               '4' - 비대칭 S Curve
function AxmContiSetProfileMode(lCoord : LongInt; uProfileMode : DWord) : DWord; stdcall;
// 지정된 좌표계의 구동 속도 프로파일 모드를 반환한다.
function AxmContiGetProfileMode(lCoord : LongInt; upProfileMode : PDWord) : DWord; stdcall;

//========== DIO 인터럽트 플래그 레지스트 읽기
// 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 bit 단위로 인터럽트 발생 상태 값을 읽음
function AxdiInterruptFlagReadBit(lModuleNo : LongInt; lOffset : LongInt; upValue : PDWord) : DWord; stdcall;
// 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 byte 단위로 인터럽트 발생 상태 값을 읽음
function AxdiInterruptFlagReadByte(lModuleNo : LongInt; lOffset : LongInt; upValue : PDWord) : DWord; stdcall;
// 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 word 단위로 인터럽트 발생 상태 값을 읽음
function AxdiInterruptFlagReadWord(lModuleNo : LongInt; lOffset : LongInt; upValue : PDWord) : DWord; stdcall;
// 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 double word 단위로 인터럽트 발생 상태 값을 읽음
function AxdiInterruptFlagReadDword(lModuleNo : LongInt; lOffset : LongInt; upValue : PDWord) : DWord; stdcall;
// 전체 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 bit 단위로 인터럽트 발생 상태 값을 읽음
function AxdiInterruptFlagRead(lOffset : LongInt; upValue : PDWord) : DWord; stdcall;


//========= 로그 관련 함수 ==========================================================================================    
// 현재 자동으로 설정됨.
// 설정 축의 함수 실행 결과를 EzSpy에서 모니터링 할 수 있도록 설정 또는 해제하는 함수이다.
// uUse : 사용 유무 => DISABLE(0), ENABLE(1)
function AxmLogSetAxis(lAxisNo : LongInt; uUse : DWord) : DWord; stdcall;

// EzSpy에서의 설정 축 함수 실행 결과 모니터링 여부를 확인하는 함수이다.
function AxmLogGetAxis(lAxisNo : LongInt; upUse : PDWord) : DWord; stdcall;

//aaaaaaaa=== 로그 출력 관련 함수
//지정한 입력 채널의 EzSpy에 로그 출력 여부를 설정한다.
function AxaiLogSetChannel(lChannelNo : LongInt; uUse : DWord) : DWord; stdcall;
//지정한 입력 채널의 EzSpy에 로그 출력 여부를 확인한다.
function AxaiLogGetChannel(lChannelNo : LongInt; upUse : PDWord) : DWord; stdcall;

//==지정한 출력 채널의 EzSpy 로그 출력 
//지정한 출력 채널의 EzSpy에 로그 출력 여부를 설정한다.
function AxaoLogSetChannel(lChannelNo : LongInt; uUse : DWord) : DWord; stdcall;
//지정한 출력 채널의 EzSpy에 로그 출력 여부를 확인한다.
function AxaoLogGetChannel(lChannelNo : LongInt; upUse : PDWord) : DWord; stdcall;

//==Log
// 지정한 모듈의 EzSpy에 로그 출력 여부 설정
function AxdLogSetModule(lModuleNo : LongInt; uUse : DWord) : DWord; stdcall;
// 지정한 모듈의 EzSpy에 로그 출력 여부 확인
function AxdLogGetModule(lModuleNo : LongInt; upUse : PDWord) : DWord; stdcall;

// 지정한 보드가 RTEX 모드일 때 그 보드의 firmware 버전을 확인한다.
function AxlGetFirmwareVersion(lBoardNo : LongInt; szVersion : PChar) : DWord; stdcall;
// 지정한 보드로 Firmware를 전송 한다.
function AxlSetFirmwareCopy(lBoardNo : LongInt; wData : PWord; wCmdData : PWord) : DWord; stdcall;
// 지정한 보드로 Firmware Update를 수행한다.
function AxlSetFirmwareUpdate(lBoardNo : LongInt) : DWord; stdcall;
// 지정한 보드의 현재 RTEX 초기화 상태를 확인 한다.
function AxlCheckStatus(lBoardNo : LongInt; dwStatus : PDWord) : DWord; stdcall;
// 지정한 축에 RTEX Master board에 범용 명령을 실행 합니다.
function AxlRtexUniversalCmd(lBoardNo : LongInt; wCmd : Word; wOffset : Word; wData : PWord) : DWord; stdcall;
// 지정한 축의 RTEX 통신 명령을 실행한다.
function AxmRtexSlaveCmd(lAxisNo : LongInt; dwCmdCode : DWord; dwTypeCode : DWord; dwIndexCode : DWord; dwCmdConfigure : DWord; dwValue : DWord) : DWord; stdcall;
// 지정한 축에 실행한 RTEX 통신 명령의 결과값을 확인한다.
function AxmRtexGetSlaveCmdResult(lAxisNo : LongInt; dwIndex : PDWord; dwValue : PDWord) : DWord; stdcall;
// 지정한 축에 RTEX 상태 정보를 확인한다.
function AxmRtexGetAxisStatus(lAxisNo : LongInt; dwStatus : PDWord) : DWord; stdcall;
// 지정한 축에 RTEX 통신 리턴 정보를 확인한다.(Actual position, Velocity, Torque)
function AxmRtexGetAxisReturnData(lAxisNo : LongInt;  dwReturn1 : PDWord; dwReturn2 : PDWord; dwReturn3 : PDWord) : DWord; stdcall;
// 지정한 축에 RTEX Slave 축의 현재 상태 정보를 확인한다.(mechanical, Inposition and etc)
function AxmRtexGetAxisSlaveStatus(lAxisNo : LongInt; dwStatus : PDWord) : DWord; stdcall;

// 지정한 축에 MLII Slave 축에 범용 네트웍 명령어를 기입한다.
function AxmSetAxisCmd(lAxisNo : LongInt; tagCommand : PDWord) : DWord; stdcall;
// 지정한 축에 MLII Slave 축에 범용 네트웍 명령의 결과를 확인한다.
function AxmGetAxisCmdResult(lAxisNo : LongInt; tagCommand : PDWORD) : DWord; stdcall;

function AxlGetDpRamData(lBoardNo : LongInt; wAddress : Word; dwpRdData : PDWord) : DWord; stdcall;
function AxlBoardReadDpramWord(lBoardNo : LongInt; wOffset : Word; dwpRdData : PDWord) : DWord; stdcall;

function AxlSetSendBoardCommand(lBoardNo : LongInt; dwCommand : DWord; dwpSendData : PDWord; dwLength : DWord) : DWord; stdcall;
function AxlGetResponseBoardCommand(lBoardNo : LongInt; dwpReadData : PDWord) : DWord; stdcall;

// Network Type Master 보드에서 Slave 들의 Firmware Version을 읽어 오는 함수.
// ucaFirmwareVersion unsigned char 형의 Array로 선언하고 크기가 4이상이 되도록 선언 해야 한다.
function AxmInfoGetFirmwareVersion(lAxisNo : LongInt;  ucaFirmwareVersion : PWord) : DWord; stdcall;
function AxaInfoGetFirmwareVersion(lModuleNo : LongInt; ucaFirmwareVersion : PWord) : DWord; stdcall;
function AxdInfoGetFirmwareVersion(lModuleN : LongInt; ucaFirmwareVersion : PWord) : DWord; stdcall;
    
//======== PCI-R1604-MLII 전용 함수=========================================================================== 
// INTERPOLATE and LATCH Command의 Option Field의 Torq Feed Forward의 값을 설정 하도록 합니다.
// 기본값은 MAX로 설정되어 있습니다.
// 설정값은 0 ~ 4000H까지 설정 할 수 있습니다.
// 설정값은 4000H이상으로 설정하면 설정은 그 이상으로 설정되나 동작은 4000H값이 적용 됩니다.
function AxmSetTorqFeedForward(lAxisNo : LongInt; dwTorqFeedForward : DWord) : DWord; stdcall;

// INTERPOLATE and LATCH Command의 Option Field의 Torq Feed Forward의 값을 읽어오는 함수 입니다.
// 기본값은 MAX로 설정되어 있습니다.
function AxmGetTorqFeedForward(lAxisNo : LongInt; dwpTorqFeedForward : PDWord) : DWord; stdcall;

// INTERPOLATE and LATCH Command의 VFF Field의 Velocity Feed Forward의 값을 설정 하도록 합니다.
// 기본값은 '0'로 설정되어 있습니다.
// 설정값은 0 ~ FFFFH까지 설정 할 수 있습니다.
function AxmSetVelocityFeedForward(lAxisNo : LongInt; dwVelocityFeedForward : DWord) : DWord; stdcall;

// INTERPOLATE and LATCH Command의 VFF Field의 Velocity Feed Forward의 값을 읽어오는 함수 입니다.
function AxmGetVelocityFeedForward(lAxisNo : LongInt; dwpVelocityFeedForward : PDWord) : DWord; stdcall;

// Encoder type을 설정한다.
// 기본값은 0(TYPE_INCREMENTAL)로 설정되어 있습니다.
// 설정값은 0 ~ 1까지 설정 할 수 있습니다.
// 설정값 : 0(TYPE_INCREMENTAL), 1(TYPE_ABSOLUTE).
function AxmSignalSetEncoderType(lAxisNo : LongInt; dwEncoderType : DWord) : DWord; stdcall;

// Encoder type을 확인한다.
function AxmSignalGetEncoderType(lAxisNo : LongInt; dwpEncoderType : PDWord) : DWord; stdcall;

// Slave Firmware Update를 위해 추가
//function AxmSetSendAxisCommand(lAxisNo : LongInt; wCommand : Word; wpSendData : PDWord; wLength : Word) : DWord; stdcall;

//======== PCI-R1604-RTEX, RTEX-PM 전용 함수============================================================== 
// 범용 입력 2,3번 입력시 JOG 구동 속도를 설정한다. 
// 구동에 관련된 모든 설정(Ex, PulseOutMethod, MoveUnitPerPulse 등)들이 완료된 이후 한번만 실행하여야 한다.
function AxmMotSetUserMotion(lAxisNo : LongInt; dVelocity : Double; dAccel : Double; dDecel : Double) : DWord; stdcall;

// 범용 입력 2,3번 입력시 JOG 구동 동작 사용 가부를 설정한다.
// 설정값 :  0(DISABLE), 1(ENABLE)
function AxmMotSetUserMotionUsage(lAxisNo: LongInt; dwUsage : DWord) : DWord; stdcall;

// MPGP 입력을 사용하여 Load/UnLoad 위치를 자동으로 이동하는 기능 설정. 
function  AxmMotSetUserPosMotion(lAxisNo : LongInt; dVelocity : Double; dAccel : Double; dDecel : Double; dLoadPos : Double; dUnLoadPos : Double; dwFilter : DWord; dwDelay : DWord) : DWord; stdcall;

// MPGP 입력을 사용하여 Load/UnLoad 위치를 자동으로 이동하는 기능 설정. 
// 설정값 :  0(DISABLE), 1(Position 기능 A 사용), 2(Position 기능 B 사용)
function  AxmMotSetUserPosMotionUsage(lAxisNo : LongInt; dwUsage : DWord) : DWord; stdcall;
//======================================================================================================== 

//======== SIO-CN2CH, 절대 위치 트리거 기능 모듈 전용 함수================================================ 
function AxcKeWriteRamDataAddr(lChannelNo : LongInt; dwAddr : DWord; dwData : DWord) : DWord; stdcall;
function AxcKeReadRamDataAddr(lChannelNo : LongInt; dwAddr : DWord; dwpData : PDWord) : DWord; stdcall;
function AxcKeResetRamDataAll(lModuleNo : LongInt; dwData : DWord) : DWord; stdcall;
function AxcTriggerSetTimeout(lChannelNo : LongInt; dwTimeout : DWord) : DWord; stdcall;
function AxcTriggerGetTimeout(lChannelNo : LongInt; dwpTimeout : PDWord) : DWord; stdcall;
function AxcStatusGetWaitState(lChannelNo : LongInt; dwpState : PDWord) : DWord; stdcall;
function AxcStatusSetWaitState(lChannelNo : LongInt; dwState : DWord) : DWord; stdcall;
//======================================================================================================== 
	
//======== PCI-N804/N404 전용, Sequence Motion ===================================================================
// Sequence Motion의 축 정보를 설정 합니다. (최소 1축)
// lSeqMapNo : 축 번호 정보를 담는 Sequence Motion Index Point
// lSeqMapSize : 축 번호 갯수
// long* LSeqAxesNo : 축 번호 배열
function AxmSeqSetAxisMap(lSeqMapNo : LongInt; lSeqMapSize : LongInt; lSeqAxesNo : PLongInt) : DWord; stdcall;
function AxmSeqGetAxisMap(lSeqMapNo : LongInt; lSeqMapSize : PLongInt; lSeqAxesNo : PLongInt) : DWord; stdcall;

// Sequence Motion의 기준(Master) 축을 설정 합니다. 
// 반드시 AxmSeqSetAxisMap(...) 에 설정된 축 내에서 설정하여야 합니다.
function AxmSeqSetMasterAxisNo(lSeqMapNo : LongInt; lMasterAxisNo : LongInt) : DWord; stdcall;

// Sequence Motion의 Node 적재 시작을 라이브러리에 알립니다.
function AxmSeqBeginNode(lSeqMapNo : LongInt) : DWord; stdcall;

// Sequence Motion의 Node 적재 종료를 라이브러리에 알립니다.
function AxmSeqEndNode(lSeqMapNo : LongInt) : DWord; stdcall;

// Sequence Motion의 구동을 시작 합니다.
function AxmSeqStart(lSeqMapNo : LongInt; dwStartOption : DWord) : DWord; stdcall;

// Sequence Motion의 각 Profile Node 정보를 라이브러리에 입력 합니다.
// 만약 1축 Sequence Motion을 사용하더라도, *dPosition는 1개의 Array로 지정하여 주시기 바랍니다.
function AxmSeqAddNode(lSeqMapNo : LongInt; dPosition : PDouble; dVelocity : Double; dAcceleration : Double; dDeceleration : Double; dNextVelocity : Double) : DWord; stdcall;

// Sequence Motion이 구동 시 현재 실행 중인 Node Index를 알려 줍니다.
function AxmSeqGetNodeNum(lSeqMapNo : LongInt; lCurNodeNo : PLongInt) : DWord; stdcall;

// Sequence Motion의 총 Node Count를 확인 합니다.
function AxmSeqGetTotalNodeNum(lSeqMapNo : LongInt; lTotalNodeCnt : PLongInt) : DWord; stdcall;

// Sequence Motion이 현재 구동 중인지 확인 합니다.
// dwInMotion : 0(구동 종료), 1(구동 중)
function AxmSeqIsMotion(lSeqMapNo : LongInt; dwInMotion : PDWord) : DWord; stdcall;

// Sequence Motion의 Memory를 Clear 합니다.
// AxmSeqSetAxisMap(...), AxmSeqSetMasterAxisNo(...) 에서 설정된 값은 유지됩니다.
function AxmSeqWriteClear(lSeqMapNo : LongInt) : DWord; stdcall;

// Sequence Motion의 구동을 종료 합니다.
// dwStopMode : 0(EMERGENCY_STOP), 1(SLOWDOWN_STOP) 
function AxmSeqStop(lSeqMapNo : LongInt; dwStopMode : DWord) : DWord; stdcall;
//======================================================================================================== 


implementation
const
